--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,11 @@ services:
       - DB_USER=root
       - DB_PASSWORD=root
       - DB_NAME=meu_campeonato
+      - DB_PORT=3306
   db:
     image: mysql:5.7
     ports:
-      - '3306:3306'
+      - '3307:3306'
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: meu_campeonato
