--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,21 @@ services:
       - DB_PASSWORD=root
       - DB_NAME=meu_campeonato
       - DB_PORT=3306
+    networks:
+      - app-network
+
   db:
     image: mysql:5.7
     ports:
-      - '3307:3306'
+      - '3308:3306'
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: meu_campeonato
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
